--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "build": "webpack -p",
         "watch": "webpack -w",
         "start": "webpack-dev-server",
+        "deploy": "npm run build && gh-pages -d dist",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "homepage": "https://jtchen0528.github.io/EasySheetProject",
     "keywords": [],
     "author": "",
     "license": "MIT",
@@ -34,6 +36,7 @@
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.23.0",
         "css-loader": "^0.27.3",
+        "gh-pages": "^3.2.3",
         "style-loader": "^0.14.1",
         "webpack": "^2.7.0",
         "webpack-dev-server": "^2.4.2"
